# melodify

./: .gitignore  .pylintrc  Makefile  README.md  executable.py  pyproject.toml
.github/workflows/: build.yml
melodify/: __init__.py  main.py
